--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,6 +63,12 @@ jobs:
           root_file: report.tex
           latexmk_use_xelatex: true
 
+      - name: Upload PDF artifact
+        uses: actions/upload-artifact@v4.3.1  # ✅ Pin upload artifact action
+        with:
+          name: rendered-pdf
+          path: report.pdf
+
       - name: Send Email with Attachment
         uses: dawidd6/action-send-mail@v3.11.0
         with:
@@ -93,4 +99,4 @@ jobs:
 
       - name: Cleanup temporary files
         if: always()
-        run: rm -f report.qmd report.pdf
+        run: rm -f report.qmd report.pdf report.tex
